libs/updraft_airspace/tests/snapshots/airspace_geojson__projects_airspace_as_a_closed_geojson_polygon.snap
---
source: libs/updraft_airspace/tests/airspace_geojson.rs
expression: "dataset.airspaces()[0].to_geojson()"
---
{
  "geometry": {
    "coordinates": [
      [
        [
          10.0,
          50.0
        ],
        [
          10.016666666666667,
          50.0
        ],
        [
          10.016666666666667,
          50.016666666666666
        ],
        [
          10.0,
          50.016666666666666
        ],
        [
          10.0,
          50.0
        ]
      ]
    ],
    "type": "Polygon"
  },
  "id": 0,
  "properties": {
    "icaoClass": 3,
    "name": "Polygon",
    "type": 0
  },
  "type": "Feature"
}
